Implement Array#minmax

Array#minmax was previous not implemented, so calling #minmax on
array was actually calling Enumerable#minmax.  This is a simple
implementation of #minmax by just calling rb_ary_min and
rb_ary_max, which improves performance significantly.

Fixes [Bug #15929]